<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/priceEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/finalEditText"
        android:layout_alignParentTop="true"
        android:ems="8"
        android:inputType="numberDecimal"
        android:text="@string/price_edit_text" />

    <TextView
        android:id="@+id/priceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/priceEditText"
        android:layout_alignBottom="@+id/priceEditText"
        android:layout_alignRight="@+id/discountTextView"
        android:text="@string/price_text_view" />

    <TextView
        android:id="@+id/discountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/priceEditText"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="56dp"
        android:text="@string/discount_text_view" />

    <EditText
        android:id="@+id/discountEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/discountTextView"
        android:layout_alignBottom="@+id/discountTextView"
        android:layout_alignLeft="@+id/priceEditText"
        android:ems="8"
        android:inputType="numberDecimal"
        android:text="@string/discount_edit_text" />

    <EditText
        android:id="@+id/finalEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/finalTextView"
        android:layout_alignBottom="@+id/finalTextView"
        android:layout_alignParentRight="true"
        android:ems="8"
        android:inputType="numberDecimal"
        android:text="@string/final_price_edit_text" />

    <TextView
        android:id="@+id/finalTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/discountTextView"
        android:layout_below="@+id/discountEditText"
        android:layout_marginTop="110dp"
        android:text="@string/final_text_view" />

    <SeekBar
        android:id="@+id/discountSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/discountEditText"
        android:layout_below="@+id/discountEditText"
        android:layout_marginTop="15dp"
        android:progress="15" />


</RelativeLayout>
